# cognition

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_and_run.bat
src/: main.c
src/core/: cog_events.c  cognition.c  cognition.h  ecs.c  ecs.h  entity.c  entity.h  events.c  events.h
src/core/audio/: cog_audio.c  cog_audio.h
src/core/camera/: cog_camera.c  cog_camera.h
src/core/config/: cog_config.c  cog_config.h
src/core/ecs/: cog_ecs.c  cog_ecs.h
src/core/graphics/: cog_render_components.c  cog_render_components.h  cog_render_system.c  cog_render_system.h  cog_renderer.c  cog_renderer.h  cog_sprite.c  cog_sprite.h  cog_texture.c  cog_texture.h
src/core/input/: cog_gamepad.c  cog_gamepad.h  cog_input.c  cog_input.h  cog_keyboard.c  cog_keyboard.h  cog_mouse.c  cog_mouse.h
src/core/modules/config/: config_manager.c  config_manager.h
src/core/modules/graphics/: render_components.c  render_components.h  render_system.c  render_system.h  renderer.c  renderer.h  sprite.c  sprite.h
src/core/modules/input/: gamepad.c  input_manager.c  input_manager.h  keyboard.c  mouse.c
src/core/modules/physics/: physics.c  physics.h  physics_components.c  physics_components.h  physics_system.c  physics_system.h  transform_components.c  transform_components.h  transform_system.c  transform_system.h
src/core/modules/resource/: resource_manager.c  resource_manager.h
src/core/modules/scripting/: cog_lua.c  cog_lua.h
src/core/modules/utils/: error_handling.c  error_handling.h  math.c  math.h  memory_manager.c  memory_manager.h  types.h
src/core/physics/: cog_physics.c  cog_physics.h  cog_physics_components.c  cog_physics_components.h  cog_physics_system.c  cog_physics_system.h  cog_shapes.c  cog_shapes.h
src/core/resource/: cog_resource.c  cog_resource.h
src/core/utils/: cog_color.c  cog_color.h  cog_error.c  cog_math.c  cog_math.h  cog_memory.c  cog_memory.h  cog_types.h
